# dx7-to-tonverk

./: .gitignore  Cargo.toml  README.md  patch-20-c3-2s.wav.asd  test.syx
src/: fm.rs  lib.rs  main.rs  stmlib.rs  synth.rs  sysex.rs  toml.rs  wav.rs  wav_writer.rs
src/fm/: algorithms.rs  constants.rs  controllers.rs  dx7note.rs  dx_units.rs  env.rs  envelope.rs  exp2.rs  fm_core.rs  fm_op_kernel.rs  freqlut.rs  lfo.rs  operator.rs  patch.rs  pitchenv.rs  porta.rs  ref_freq.rs  sin.rs  tuning.rs  voice.rs
src/stmlib/: dsp.rs  random.rs  sine_lut.rs
tests/: algorithm_debug_test.rs  algorithm_fft_validation.rs  audio_output_validation.rs  audio_path_test.rs  common.rs  comprehensive_dx7_tests_complete.rs  debug_algorithm_execution.rs  debug_clipping_analysis.rs  debug_freqlut_values.rs  debug_frequency_calculation.rs  debug_min_params.rs  debug_patch20_algorithm.rs  debug_patch20_comparison.rs  debug_phase_relationship.rs  debug_polyphony.rs  debug_sample_values.rs  dx7_patch_validation.rs  envelope_algorithm_test.rs  envelope_level_debug.rs  envelope_test.rs  envelope_timing_test.rs  expected_frequency_analysis.rs  fft_tests.rs  fm_sideband_analysis.rs  frequency_analysis.rs  low_frequency_noise_analysis.rs  midi_pitch_verification.rs  patch_20.rs  simple_math_test.rs  smoke.rs  synthesis_analysis.rs  synthesis_components_test.rs  test_simple_sine_patch.rs  volume_scaling_test.rs
