[package]
name = "tv7"
version = "0.0.5"
edition = "2024"
authors = ["Tyler Neely"]
description = "Generate Elektron Tonverk multisamples from your favorite DX7 SYSEX patches"
license = "MIT"
repository = "https://github.com/spacejam/tv7"
keywords = ["audio", "fm", "dx7", "dsp", "tonverk"]
categories = ["multimedia::audio"]

[features]
fast_op_level_modulation = []

[dependencies]
dx7 = "0.0.4"
hound = "3.5.1"
clap = { version = "4.5", features = ["derive"] }
